# survivor

./: .gitignore  README.md  build.sh  run.sh
python/: config.json
python/survivor/: _llm_server.py  cli.py  events.py  llm_server.py
python/survivor/_simulation/: __init__.py  entrypoint.py  game_states.py  player_agent.py  survivor.py
python/survivor/llm_util/: __init__.py  _groq_backend.py  _local_backend.py
python/tests/: test_events.py
rust/: Cargo.toml  build-all.sh  build.sh  run.sh
rust/static/: index.html
rust/survivor-app/: Cargo.toml
rust/survivor-app/src/: main.rs
rust/survivor-lib/: Cargo.toml
rust/survivor-lib/src/: lib.rs
rust/survivor-simulation/: Cargo.toml  config.json
rust/survivor-simulation/src/: lib.rs  llm.rs  main.rs  simulation.rs
rust/survivor-wasm/: Cargo.toml
rust/survivor-wasm/src/: animation.rs  lib.rs  main_region.rs  navbar.rs  playback.rs  rollout.rs  sidebar.rs  ui_interactions.rs
static/: plomp.html
typescript/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/public/rollouts/: survivor-1.json
typescript/src/: main.tsx
typescript/src/components/: App.tsx  MainDisplay.ts  Navbar.ts  PlaybackControls.tsx  RolloutSelector.tsx  Sidebar.ts  ThreeCanvas.tsx
typescript/src/styles/: PlaybackControls.css  main.css
typescript/src/types/: rollout.ts
