[package]
name = "survivor-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console", 
    "Document", 
    "Window", 
    "Element", 
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d"
]}
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]