[package]
name = "survivor-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console", 
    "Document", 
    "Window", 
    "Element", 
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "HtmlElement",
    "CssStyleDeclaration",
    "Node",
    "DomRect",
    "Text",
    "MouseEvent",
    "EventTarget",
    "HtmlHeadElement",
    "HtmlCollection",
    "NodeList"
]}
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]