[package]
name = "survivor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "CssStyleDeclaration",
    "HtmlStyleElement",
] }
js-sys = "0.3"
serde_json = "1.0"
lazy_static = "1.4"